[package]
name = "base64_type"
authors = ["IronCore Labs <code@ironcorelabs.com>"]
version = "0.1.1"
edition = "2021"
resolver = "2"

[dependencies]
base64 = "0.21"
base64-serde = "0.7"
bytes = "1"
proptest = { version = "1.0", optional = true }
proptest-derive = { version = "0.3", optional = true }
serde = "1"

[dev-dependencies]
proptest = "1.0"
proptest-derive = "0.3"
serde_json = "1"

[features]
arbitrary = ["proptest", "proptest-derive"]
