[package]
name = "base64_type"
version = "0.1.2-pre.0"
description = "Simple Rust type wrapper for Vec<u8> that uses base64 for serialization"
authors = ["IronCore Labs <code@ironcorelabs.com>"]
categories = ["rust-patterns"]
license = "AGPL-3.0-only"
documentation = "https://docs.rs/base64_type"
readme = "README.md"
repository = "https://github.com/IronCoreLabs/base64_type"
keywords = ["base64"]
edition = "2021"
rust-version = "1.70.0"

[dependencies]
base64 = "0.21"
base64-serde = "0.7"
bytes = "1"
proptest = { version = "1.0", optional = true }
proptest-derive = { version = "0.4", optional = true }
serde = "1"

[dev-dependencies]
proptest = "1.0"
proptest-derive = "0.4"
serde_json = "1"

[features]
arbitrary = ["proptest", "proptest-derive"]
